crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_record_fields_in_expr.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = { x = 1, x = 2 }\n"
---
[
    DuplicateField {
        name: "x",
        first: Region {
            start: Position {
                line: 3,
                column: 7,
            },
            end: Position {
                line: 3,
                column: 8,
            },
        },
        second: Region {
            start: Position {
                line: 3,
                column: 14,
            },
            end: Position {
                line: 3,
                column: 15,
            },
        },
    },
]
