crates/nash-can/src/snapshots/nash_can__module__tests__duplicate_type_two_aliases.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Foo = Int\n\ntype alias Foo = String\n"
---
[
    DuplicateType {
        name: "Foo",
        first: Region {
            start: Position {
                line: 3,
                column: 12,
            },
            end: Position {
                line: 3,
                column: 15,
            },
        },
        second: Region {
            start: Position {
                line: 5,
                column: 12,
            },
            end: Position {
                line: 5,
                column: 15,
            },
        },
    },
]
