crates/nash-can/src/snapshots/nash_can__module__tests__extensible_record_alias_allowed.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Extend a b = { a | items : b }\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Empty,
    unions: [],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 4,
                    column: 1,
                },
            },
            value: Alias {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 12,
                        },
                        end: Position {
                            line: 3,
                            column: 18,
                        },
                    },
                    value: "Extend",
                },
                parameters: [
                    "a",
                    "b",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 25,
                        },
                        end: Position {
                            line: 3,
                            column: 42,
                        },
                    },
                    value: Record {
                        fields: [
                            FieldType {
                                index: 0,
                                field: "items",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 39,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 40,
                                        },
                                    },
                                    value: Var(
                                        "b",
                                    ),
                                },
                            },
                        ],
                        ext: Some(
                            "a",
                        ),
                    },
                },
            },
        },
    ],
    binops: [],
}
