crates/nash-can/src/snapshots/nash_can__module__tests__field_access.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf r = r.name\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 3,
                        },
                        end: Position {
                            line: 3,
                            column: 4,
                        },
                    },
                    value: Var(
                        "r",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 7,
                    },
                    end: Position {
                        line: 3,
                        column: 13,
                    },
                },
                value: Access {
                    record: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 7,
                            },
                            end: Position {
                                line: 3,
                                column: 8,
                            },
                        },
                        value: VarLocal(
                            "r",
                        ),
                    },
                    field: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 9,
                            },
                            end: Position {
                                line: 3,
                                column: 13,
                            },
                        },
                        value: "name",
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
