crates/nash-can/src/snapshots/nash_can__module__tests__function_call.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf x = g x\n\ng y = y\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 3,
                        },
                        end: Position {
                            line: 3,
                            column: 4,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 7,
                    },
                    end: Position {
                        line: 3,
                        column: 10,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 7,
                            },
                            end: Position {
                                line: 3,
                                column: 8,
                            },
                        },
                        value: VarTopLevel(
                            QualifiedName {
                                home: ModuleName {
                                    package: None,
                                    name: "Main",
                                },
                                name: "g",
                            },
                        ),
                    },
                    arguments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 9,
                                },
                                end: Position {
                                    line: 3,
                                    column: 10,
                                },
                            },
                            value: VarLocal(
                                "x",
                            ),
                        },
                    ],
                },
            },
        },
        next: Declare {
            definition: Def {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 1,
                        },
                        end: Position {
                            line: 5,
                            column: 2,
                        },
                    },
                    value: "g",
                },
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 3,
                            },
                            end: Position {
                                line: 5,
                                column: 4,
                            },
                        },
                        value: Var(
                            "y",
                        ),
                    },
                ],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 7,
                        },
                        end: Position {
                            line: 5,
                            column: 8,
                        },
                    },
                    value: VarLocal(
                        "y",
                    ),
                },
            },
            next: Empty,
        },
    },
    unions: [],
    aliases: [],
    binops: [],
}
